2006-04-06  Thomas Andersen  <phomes@gmail.com>

	* gyahtzee.c: Update About dialog

2006-04-04  Callum McKenzie  <callum@spooky-possum.org>

	* gyahtzee.c: Patch from Przemys©aw Grzegorczyk to unref
	the GnomeProgram in all main loops.

2006-04-03  Callum McKenzie  <callum@spooky-possum.org>

	* pix/Makefile.am: 
	* gyahtzee.c:
	* gtali.desktop.in: Update the icon handling to use icon
	themes. Rename gnome-gtali.png to gnome-tali.png.

2006-03-29  Callum McKenzie  <callum@spooky-possum.org>

	* yahtzee.c: 
	* gyahtzee.c:
	* gyahtzee.h:	
	* setup.c: popt -> GOption migration. Remove the unimplemented -s
	option and the almost useless -r option. Make the other options
	work properly Also changed the gnome_window... icon setting call 
	to the gtk_window... equivalent. Removed the explicit error
	reporting on the gconf reads.

2006-03-22  Callum McKenzie  <callum@spooky-possum.org>

	* help/C/gtali.xml: Remove the doctable link, it was broken
	*and* being used inappropriately. Replaced with the 
	ghelp:gnome-feedback link. Bug #335263.

2006-02-15  Callum McKenzie  <callum@spooky-possum.org>

	* yahtzee.h: Remove <gnome.h> in favour of <glib/gi18n.h>. Also
	remove the conditional: every other game requires libintl so tali
	can too.

2006-01-21  Callum McKenzie  <callum@spooky-possum.org>

	* gyahtzee.h: 
	* gyahtzee.c: Restore the "blank die" pixmap for selected
	dice. The toolbar selection isn't obvious enough in all
	themes. See bug #327872 for discussion.

2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* gyahtzee.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2005-09-25  Callum McKenzie  <callum@spooky-possum.org>

	* setup.c (setup_game): GTali -> Tali in the preferences dialog
	name.

2005-09-05  Richard Hoelscher  <rah@rahga.com>

	* yahzee.h:
	* yahtzee.c (RollSelectedDice): Updates related to toggle buttons.
	* gyahtzee.h: Drop NUMBER_OF_PIXMAPS by one.