@@ -1,3 +1,9 @@
+2006-06-29  Richard Hoelscher  <rah@rahga.com>
+
+	* gyahtzee.c: patch from "Iain *" by e-mail to use the user's first 
+	real_name rather than "Human", wuth adjustments in case of "Unknown"
+	or blank string.
+
 2006-04-06  Thomas Andersen  <phomes@gmail.com>
 
 	* gyahtzee.c: Update About dialog
